[feat] 오늘의 추천 상품 처음과 끝 슬라이드에서 버튼 사라지는 기능 추가 #21

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
         <div class="swiper-slide"><a href="/"><img src="./client/assets/banner/banner03.png" alt="칼리 퍼플 위크 배너" /></a></div>
         <div class="swiper-slide"><a href="/"><img src="./client/assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
       </div>
-      <div class="swiper-button-prev main_banner_prev"></div>
-      <div class="swiper-button-next main_banner_next"></div>
+      <button type="button" class="swiper-button-prev main_banner_prev"></button>
+      <button type="button" class="swiper-button-next main_banner_next"></button>
     </div>
   </section>
   
@@ -499,8 +499,8 @@
             </div>
           </div>
         </div>
-        <div class="swiper-button-prev recommend_products_prev"></div>
-        <div class="swiper-button-next recommend_products_next"></div>
+        <button class="swiper-button-prev recommend_products_prev"></button>
+        <button class="swiper-button-next recommend_products_next"></button>
       </div>
     </section>
 
