--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
   
   <main class="page_main">
     <!-- 오늘의 상품 추천 -->
-    <section class="today_recommend_products">
+    <section class="recommend_products">
       <h2 class="a11yHidden">오늘의 상품 추천</h2>
       <p class="recommend_products_sub">이 상품 어때요?</p>
       <div class="swiper_container">
-        <div class="swiper_recommend_products">
+        <div class="swiper_recommend_products swiper_today">
           <div class="swiper-wrapper recommend_products_wrapper">
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
@@ -499,8 +499,8 @@
             </div>
           </div>
         </div>
-        <button class="swiper-button-prev recommend_products_prev"></button>
-        <button class="swiper-button-next recommend_products_next"></button>
+        <button class="swiper-button-prev recommend_products_prev today_prev"></button>
+        <button class="swiper-button-next recommend_products_next today_next"></button>
       </div>
     </section>
 
@@ -511,11 +511,11 @@
     </div>
 
     <!-- 할인 상품 추천 -->
-    <section class="today_recommend_products">
+    <section class="recommend_products">
       <h2 class="a11yHidden">할인 상품 추천</h2>
       <p class="recommend_products_sub">놓치면 후회할 가격</p>
       <div class="swiper_container">
-        <div class="swiper_recommend_products">
+        <div class="swiper_recommend_products swiper_sale">
           <div class="swiper-wrapper recommend_products_wrapper">
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
@@ -693,8 +693,8 @@
             </div>
           </div>
         </div>
-        <div class="swiper-button-prev recommend_products_prev"></div>
-        <div class="swiper-button-next recommend_products_next"></div>
+        <button class="swiper-button-prev recommend_products_prev sale_prev"></button>
+        <button class="swiper-button-next recommend_products_next sale_next"></button>
       </div>
     </section>
     <!-- 최근 본 상품 -->
