[refac] 장바구니 페이지내 상품리스트 간 여백 조정 #44

--- a/client/cart.html
+++ b/client/cart.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/cart.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/cart/cart.js" type="module"></script>
     <title>마켓칼리</title>
   </head>
 
@@ -338,6 +338,55 @@
                 </h4>
 
                 <ul class="product_list_box">
+                  <li class="product_list">
+                    <label for="" class="checked">
+                      <input type="checkbox" class="a11yHidden" />
+                      <img
+                        src="./assets/icons/cart/checked_icon.svg"
+                        alt="선택하기"
+                      />
+                    </label>
+
+                    <a href="#" class="product_img">
+                      <img
+                        src="./assets/thumbnail/product01.png"
+                        alt="[풀무원]탱탱쫄면(4개입)"
+                      />
+                    </a>
+
+                    <div class="product_name">
+                      <a href="#"> [풀무원] 탱탱쫄면 (4개입) </a>
+                    </div>
+
+                    <div class="count_box">
+                      <button class="minus_btn">
+                        <img
+                          src="./assets/icons/cart/minus.svg"
+                          alt="수량 내리기"
+                        />
+                      </button>
+
+                      <div class="count">1</div>
+
+                      <button class="plus_btn">
+                        <img
+                          src="./assets/icons/cart/plus.svg"
+                          alt="수량 올리기"
+                        />
+                      </button>
+                    </div>
+                    <!-- count_box -->
+
+                    <p class="product_price">19,990원</p>
+
+                    <button class="delete_btn">
+                      <img
+                        src="./assets/icons/cart/cancle.svg"
+                        alt="상품 삭제하기"
+                      />
+                    </button>
+                  </li>
+
                   <li class="product_list">
                     <label for="" class="checked">
                       <input type="checkbox" class="a11yHidden" />
