[chore & feat] main_banner pagination 기능 구현 및 디자인 #18

--- a/index.html
+++ b/index.html
@@ -305,11 +305,12 @@
   <section>
     <div class="swiper_main_banner">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><a href="/"><img src="./client/assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
-        <div class="swiper-slide"><a href="/"><img src="./client/assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
-        <div class="swiper-slide"><a href="/"><img src="./client/assets/banner/banner03.png" alt="칼리 퍼플 위크 배너" /></a></div>
-        <div class="swiper-slide"><a href="/"><img src="./client/assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
+        <div class="swiper-slide slide_main_banner"><a href="/"><img src="./client/assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
+        <div class="swiper-slide slide_main_banner"><a href="/"><img src="./client/assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
+        <div class="swiper-slide slide_main_banner"><a href="/"><img src="./client/assets/banner/banner03.png" alt="칼리 퍼플 위크 배너" /></a></div>
+        <div class="swiper-slide slide_main_banner"><a href="/"><img src="./client/assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
       </div>
+      <div class="swiper-pagination pagination_main_banner"></div>
       <button type="button" class="swiper-button-prev main_banner_prev"></button>
       <button type="button" class="swiper-button-next main_banner_next"></button>
     </div>
