--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -403,12 +403,12 @@
     </section> <!-- /product_information -->
   </main>
   
-  <navigation class="product_navigation">
+  <nav class="product_navigation">
     <button onclick="goToScroll('description')" class="btn_product_description">상품설명</button>
     <button onclick="goToScroll('detail_information')"class="btn_detail_information">상세정보</button>
     <button onclick="goToScroll('product-review-wrapper')" class="btn_product_review">후기<span>(0)</span></button>
     <button onclick="goToScroll('product-review-wrapper')" class="btn_product_inquiry">문의</button>
-  </navigation> <!-- /product_navigation -->
+  </nav> <!-- /product_navigation -->
 
   <section class="description">
     <article class="product_intro">
