[feat] 문의 & 리뷰 팝업창 닫기 및 취소 기능 구현 완료 #42

--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -34,7 +34,7 @@
         </li>
   
         <span class="top_bar">|</span>
-  
+                               
         <li class="topbtn_login">
           <a href="#">로그인</a>
         </li>
@@ -472,7 +472,7 @@
       <h2>
         후기 작성
       </h2>
-      <button class="icon-close" aria-label="close_window"></button>
+      <button class="icon-close close-review" aria-label="close_window"></button>
     </div>
 
     <div class="review-popup-info">
@@ -493,7 +493,7 @@
     </div>
 
     <div class="review-popup-button-wrapper">
-      <button class="btn-cancel">취소</button>
+      <button class="btn-cancel cancel-review">취소</button>
       <button class="btn-submit">등록</button>
     </div>
   </div>
@@ -662,7 +662,7 @@
       <button class="bg-arrow_next" aria-label="next_page"></button>
     </div>
   </div>
-
+  
   
   <!--문의 작성 팝업  -->
   <div class="review-popup-wrapper inquiry-popup-wrapper folded">
@@ -670,7 +670,7 @@
       <h2>
         문의 작성
       </h2>
-      <button class="icon-close" aria-label="close_window"></button>
+      <button class="icon-close close-inquiry" aria-label="close_window"></button>
     </div>
 
     <div class="review-popup-info">
@@ -695,10 +695,11 @@
     <input type="checkbox" name="checker" id="isSecret"><label for="isSecret">비밀글로 문의하기</label>
     </div>
     <div class="review-popup-button-wrapper">
-      <button class="btn-cancel">취소</button>
+      <button class="btn-cancel cancel-inquiry">취소</button>
       <button class="btn-submit">등록</button>
     </div>
   </div>
+  <div class="popup-modal"></div>
 
   <!-- 푸터 -->
   <footer class="footer_wrap">
