--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -472,7 +472,7 @@
       <h2>
         후기 작성
       </h2>
-      <button class="icon-close close-review" aria-label="close_window"></button>
+      <button class="icon-close popup-close" aria-label="close_window"></button>
     </div>
 
     <div class="review-popup-info">
@@ -493,7 +493,7 @@
     </div>
 
     <div class="review-popup-button-wrapper">
-      <button class="btn-cancel cancel-review">취소</button>
+      <button class="btn-cancel popup-close">취소</button>
       <button class="btn-submit">등록</button>
     </div>
   </div>
@@ -670,7 +670,7 @@
       <h2>
         문의 작성
       </h2>
-      <button class="icon-close close-inquiry" aria-label="close_window"></button>
+      <button class="icon-close popup-close" aria-label="close_window"></button>
     </div>
 
     <div class="review-popup-info">
@@ -695,7 +695,7 @@
     <input type="checkbox" name="checker" id="isSecret"><label for="isSecret">비밀글로 문의하기</label>
     </div>
     <div class="review-popup-button-wrapper">
-      <button class="btn-cancel cancel-inquiry">취소</button>
+      <button class="btn-cancel popup-close">취소</button>
       <button class="btn-submit">등록</button>
     </div>
   </div>
