--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -529,9 +529,9 @@
             공지
           </span>
           <button class="notice-title collapsible-table">판매(일시)중단 제품 안내(22.11.10 업데이트)</button></td>
-          <td>칼리</td>
-          <td>2017.02.01</td>
-          <td>-</td>
+          <td class="author">칼리</td>
+          <td class="created-date">2017.02.01</td>
+          <td class="status">-</td>
         </tr>
       </tbody>
     </table>
@@ -569,9 +569,9 @@
       <tbody>
         <tr>
           <td><button class="collapsible-table">팩이 터져서 왔어요</button></td>
-          <td>김*식</td>
-          <td>2022.11.11</td>
-          <td>답변대기</td>
+          <td class="author">김*식</td>
+          <td class="created-date">2022.11.11</td>
+          <td class="status">답변대기</td>
         </tr>
       </tbody>
     </table>
@@ -609,9 +609,9 @@
       <tbody>
         <tr>
           <td class="is-secret"><button class="collapsible-table">비밀글입니다.</button><img src="./assets/icons/Icon/Lock.svg" alt=""/></td>
-          <td>김*범</td>
-          <td>2022.09.13</td>
-          <td class="is-answered">답변완료</td>
+          <td class="author">김*범</td>
+          <td class="created-date">2022.09.13</td>
+          <td class="status is-answered">답변완료</td>
         </tr>
         <!-- <tr>
           <td class="is-secret"><button class="notice-title">비밀글입니다.</button><img src="./assets/icons/Icon/Lock.svg" alt="" /></td>
