[feat] 장바구니 페이지 마크업 리팩토링 및 체크박스 기능 추가

--- a/client/cart.html
+++ b/client/cart.html
@@ -312,14 +312,8 @@
         <div class="cart_container">
           <div class="cart_list_box">
             <div class="select_menu">
-              <label for="">
-                <input type="checkbox" class="a11yHidden" />
-                <img
-                  src="./assets/icons/cart/checked_icon.svg"
-                  alt="선택하기"
-                />
-                <span class="select_all">전체선택 (0/1)</span>
-              </label>
+              <input type="checkbox" id="all_check" name="all" />
+              <label for="all_check">전체선택 (0/1)</label>
 
               <button class="select_delete">선택삭제</button>
             </div>
@@ -339,13 +333,8 @@
 
                 <ul class="product_list_box">
                   <li class="product_list">
-                    <label for="" class="checked">
-                      <input type="checkbox" class="a11yHidden" />
-                      <img
-                        src="./assets/icons/cart/checked_icon.svg"
-                        alt="선택하기"
-                      />
-                    </label>
+                    <input type="checkbox" id="sub_check" name="list" />
+                    <label for="sub_check" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -388,13 +377,8 @@
                   </li>
 
                   <li class="product_list">
-                    <label for="" class="checked">
-                      <input type="checkbox" class="a11yHidden" />
-                      <img
-                        src="./assets/icons/cart/checked_icon.svg"
-                        alt="선택하기"
-                      />
-                    </label>
+                    <input type="checkbox" id="sub_check" name="list" />
+                    <label for="sub_check" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -453,13 +437,8 @@
 
                 <ul class="product_list_box">
                   <li class="product_list">
-                    <label for="" class="checked">
-                      <input type="checkbox" class="a11yHidden" />
-                      <img
-                        src="./assets/icons/cart/checked_icon.svg"
-                        alt="선택하기"
-                      />
-                    </label>
+                    <input type="checkbox" id="sub_check" name="list" />
+                    <label for="sub_check" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
                       <img
@@ -506,11 +485,8 @@
 
             <div class="cart_list_box">
               <div class="select_menu">
-                <label for="">
-                  <input type="checkbox" class="a11yHidden" />
-                  <img src="./assets/icons/cart/checked_icon.svg" alt="" />
-                  <span class="select_all">전체선택 (0/1)</span>
-                </label>
+                <input type="checkbox" id="all_check" name="all" />
+                <label for="all_check">전체선택 (0/1)</label>
 
                 <button class="select_delete">선택삭제</button>
               </div>
