[refact] 장바구니 수량 버튼 마크업 리팩토링 #49

--- a/client/cart.html
+++ b/client/cart.html
@@ -357,7 +357,7 @@
 
                       <div class="count">1</div>
 
-                      <button class="plus_btn">
+                      <button class="plus_btn" id="btn_1">
                         <img
                           src="./assets/icons/cart/plus.svg"
                           alt="수량 올리기"
@@ -401,7 +401,7 @@
 
                       <div class="count">1</div>
 
-                      <button class="plus_btn">
+                      <button class="plus_btn" id="btn_2">
                         <img
                           src="./assets/icons/cart/plus.svg"
                           alt="수량 올리기"
@@ -448,25 +448,18 @@
                     </a>
 
                     <div class="product_name">
-                      <a href="#"> [풀무원] 탱탱쫄면 (4개입) </a>
+                      <a href="#"> [풀무원] 탱탱쫄면 (4개입)</a>
                     </div>
 
                     <div class="count_box">
-                      <button class="minus_btn">
-                        <img
-                          src="./assets/icons/cart/minus.svg"
-                          alt="수량 내리기"
-                        />
-                      </button>
+                      <!--마이너스-->
+                      <button class="minus_btn">수량내리기</button>
 
+                      <!--수량-->
                       <div class="count">1</div>
 
-                      <button class="plus_btn">
-                        <img
-                          src="./assets/icons/cart/plus.svg"
-                          alt="수량 올리기"
-                        />
-                      </button>
+                      <!--증가-->
+                      <button class="plus_btn">수량올리기</button>
                     </div>
                     <!-- count_box -->
 
