[refac] 장바구니 체크기능 checked로 기본값 변경

--- a/client/cart.html
+++ b/client/cart.html
@@ -312,7 +312,7 @@
         <div class="cart_container">
           <div class="cart_list_box">
             <div class="select_menu">
-              <input type="checkbox" id="all_check" name="all" />
+              <input type="checkbox" id="all_check" name="all" checked />
               <label for="all_check">전체선택 (0/1)</label>
 
               <button class="select_delete">선택삭제</button>
@@ -333,7 +333,7 @@
 
                 <ul class="product_list_box">
                   <li class="product_list">
-                    <input type="checkbox" id="sub_check" name="list" />
+                    <input type="checkbox" id="sub_check" name="list" checked />
                     <label for="sub_check" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
@@ -377,7 +377,7 @@
                   </li>
 
                   <li class="product_list">
-                    <input type="checkbox" id="sub_check" name="list" />
+                    <input type="checkbox" id="sub_check" name="list" checked />
                     <label for="sub_check" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
@@ -437,7 +437,7 @@
 
                 <ul class="product_list_box">
                   <li class="product_list">
-                    <input type="checkbox" id="sub_check" name="list" />
+                    <input type="checkbox" id="sub_check" name="list" checked />
                     <label for="sub_check" class="a11yHidden">선택하기</label>
 
                     <a href="#" class="product_img">
@@ -478,7 +478,7 @@
 
             <div class="cart_list_box">
               <div class="select_menu">
-                <input type="checkbox" id="all_check" name="all" />
+                <input type="checkbox" id="all_check" name="all" checked />
                 <label for="all_check">전체선택 (0/1)</label>
 
                 <button class="select_delete">선택삭제</button>
