[feat] 장바구니 버튼을 누르면 말풍선이 떴다가 사라지게 하기 #52

--- a/client/page_productDetail_my.html
+++ b/client/page_productDetail_my.html
@@ -8,6 +8,7 @@
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/a11y.css" />
   <link rel="stylesheet" href="./css/page_productDetail_my.css"> 
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script defer src="./js/productDetail/productDetail_my.js"></script>
@@ -75,11 +76,11 @@
       </ul>
     </section>
 
-    <section style="background-color:violet;" class="headContent_wrap container">
-      <div class="modal_cart">
+    <section class="headContent_wrap container">
+      <div class="modal_cart a11yHidden">
           <img class="modal_img" src="assets/tangtang/detail_view.jpg">
           <div>
-            <span class="modal_product_name">[풀무원] 탱탱쫄 (4개입)</span>
+            <span class="modal_product_name">[풀무원] 탱탱쫄면 (4개입)</span>
             <span class="modal_text">장바구니에 상품을 담았습니다.</span>
           </div>
       </div>
