[feat] 전체선택시 전체선택란에 자동으로 상품개수 들어가도록 구현 #53

--- a/client/cart.html
+++ b/client/cart.html
@@ -321,7 +321,7 @@
 
             <div class="cart_list">
               <div class="cart_text_box">
-                <h4 class="list_title">
+                <p class="list_title">
                   <span class="cold_storage">냉장 식품</span>
                   <button class="close_btn">
                     <img
@@ -329,7 +329,7 @@
                       alt="메뉴 접기"
                     />
                   </button>
-                </h4>
+                </p>
 
                 <ul class="product_list_box">
                   <li class="product_list">
@@ -425,7 +425,7 @@
 
             <div class="cart_list">
               <div class="cart_text_box">
-                <h4 class="list_title">
+                <p class="list_title">
                   <span class="freezing_storage">냉동 식품</span>
                   <button class="close_btn">
                     <img
@@ -433,7 +433,7 @@
                       alt="메뉴 접기"
                     />
                   </button>
-                </h4>
+                </p>
 
                 <ul class="product_list_box">
                   <li class="product_list">
