[feat] 문의작성 글자수 세기 기능 추가   #43

--- a/client/page_productDetail_dr.html
+++ b/client/page_productDetail_dr.html
@@ -528,10 +528,10 @@
           
           <fieldset class="review-content-input-wrapper">
             <label for="content">내용</label>
-            <textarea inputmode='text' required maxlength="5000"
+            <textarea inputmode='text' id="inquiry-text" required maxlength="5000"
             name="content"></textarea>
             
-            <p class="content-length-counter">0/5000</p>
+            <p class="content-length-counter" id="inquiry-count">0/5000</p>
           </fieldset>
         </div>
         <div class="secret-checkbox">
