[feat] 오늘의 추천 상품 장바구니 아이콘에 기능 모두 적용 #51

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <a href="/">
                 <div class="product_img_container">
                   <img src="./client/assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
-                  <button type="button" class="cart_icon">
+                  <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
                 </div>
