--- a/client/register.html
+++ b/client/register.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/register.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/register/register.js" defer></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <title>회원가입</title>
   </head>
-
 <body>
   <header class="header_wrap">
     <section class="popup_wrap">
@@ -297,19 +296,20 @@
       <div class="register register_id">
         <span class="register_kind essential">아이디</span>
 
-        <form method="POST">
+        <form method="POST" >
           <fieldset>
             <legend>아이디</legend>
             <div class="register_group">
               <div class="register_input">
                 <label for="id" class="a11yHidden">아이디</label>
-                <input id="id" class="register_common" type="text" required placeholder="아이디를 입력해주세요" name="id"/>
+                <input id="id" class="register_common" type="text" required placeholder="아이디를 입력해주세요" name="id" minlength="4" maxlength="20"/>
               </div>
             </div>
+            <p id="id_validation" class="register_validation">4자 이상 20자 이하 영문 혹은 영문과 숫자 조합</p>
           </fieldset>
         </form>
 
-        <button class="register_overlap input_active">중복확인</button>
+        <button id="id_overlap" class="register_overlap" disabled="">중복확인</button>
       </div>
 
       <div class="register register_password">
@@ -321,9 +321,11 @@
             <div class="register_group">
               <div class="register_input">
                 <label for="password" class="a11yHidden">비밀번호</label>
-                <input id="password" class="register_common" type="password" required placeholder="비밀번호를 입력해주세요" name="password"/>
+                <input id="password" class="register_common" type="password" required placeholder="비밀번호를 입력해주세요" name="password" minlength="8" maxlength="20"/>
               </div>
             </div>
+            <p id="password_validation" class="register_validation">영문,숫자,특수문자(공백 제외) 허용</p>
+            <p id="password_length" class="register_validation">8자 이상 20자 이하 입력해주세요.</p>
           </fieldset>
         </form>
       </div>
@@ -336,10 +338,12 @@
             <legend>비밀번호 확인</legend>
             <div class="register_group">
               <div class="register_input">
-                <label for="password2" class="a11yHidden">비밀번호 확인</label>
-                <input id="password2" class="register_common" type="password" required placeholder="비밀번호를 한번 더 입력해주세요" name="password2"/>
+                <label for="password_check" class="a11yHidden">비밀번호 확인</label>
+                <input id="password_check" class="register_common" type="password" required placeholder="비밀번호를 한번 더 입력해주세요" name="password_check"/>
               </div>
             </div>
+            <p id="password_retry" class="register_validation">바밀번호를 한번 더 입력해주세요.</p>
+            <p id="password_same" class="register_validation">바밀번호가 일치하지 않습니다.</p>
           </fieldset>
         </form>
       </div>
@@ -356,6 +360,7 @@
                 <input id="name" class="register_common" type="text" required placeholder="이름을 입력해주세요" name="name"/>
               </div>
             </div>
+            <p id="name_validation" class="register_validation">이름을 입력해주세요.</p>
           </fieldset>
         </form>
       </div>
@@ -372,10 +377,12 @@
                 <input id="email" class="register_common" type="text" required placeholder="예) marketkarly@karly.com" name="email"/>
               </div>
             </div>
+            <p id="email_validation" class="register_validation">이메일을 입력해주세요.</p>
+            <p id="email_match" class="register_validation">이메일 형식으로 입력해 주세요.</p>
           </fieldset>
         </form>
 
-        <button class="register_overlap">중복확인</button>
+        <button id="email_overlap" class="register_overlap" disabled="">중복확인</button>
       </div>
 
       <div class="register register_phone">
@@ -387,43 +394,46 @@
             <div class="register_group">
               <div class="register_input">
                 <label for="phone" class="a11yHidden">휴대폰</label>
-                <input id="phone" class="register_common" type="tel" required placeholder="숫자만 입력해주세요." name="phone"/>
+                <input id="phone" class="register_common" type="text" required placeholder="숫자만 입력해주세요." name="phone" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" maxlength="11"/>
               </div>
             </div>
+            <p id="phone_validation" class="register_validation">휴대폰 번호를 입력해주세요.</p>
           </fieldset>
         </form>
 
-        <button class="register_overlap">인증번호 받기</button>
+        <button id="phone_overlap" class="register_overlap" disabled="">인증번호 받기</button>
       </div>
 
       <div class="register register_address">
-        <span class="register_kind">주소</span>
+        <span class="register_kind essential">주소</span>
 
         <div class="address_wrap">
-          <button class="address_button">주소 검색</button>
+          <button id="address_search" class="address_button">주소 검색</button>
           <p class="register_notice">배송지에 따라 상품 정보가 달라질 수 있습니다.</p>
         </div>
 
-        <!--<form method="POST">
-          <fieldset>
-            <legend>주소</legend>
-            <div class="register_group">
-              <div class="register_input">
-                <label for="address" class="a11yHidden">주소</label>
-                <input id="address" class="register_common" type="text" readonly placeholder="주소를 검색해 주세요" name="address"/>
+        <div class="address_detail none">
+          <form method="POST">
+            <fieldset>
+              <legend>주소</legend>
+              <div class="register_group">
+                <div class="register_input">
+                  <label for="address" class="a11yHidden">주소</label>
+                  <input id="address" class="register_common" type="text" readonly placeholder="주소를 검색해 주세요" name="address"/>
+                </div>
+
+                <div class="register_input address_input">
+                  <label for="sub_address" class="a11yHidden">나머지주소</label>
+                  <input id="sub_address" class="register_common" type="text" placeholder="나머지 주소를 입력해주세요" name="sub_address"/>
+                </div>
+
+                <p class="register_notice">배송지에 따라 상품 정보가 달라질 수 있습니다.</p>
               </div>
+            </fieldset>
+          </form>
 
-              <div class="register_input address_input">
-                <label for="sub_address" class="a11yHidden">나머지주소</label>
-                <input id="sub_address" class="register_common" type="text" placeholder="나머지 주소를 입력해주세요" name="sub_address"/>
-              </div>
-
-              <p class="register_notice">배송지에 따라 상품 정보가 달라질 수 있습니다.</p>
-            </div>
-          </fieldset>
-        </form>
-
-        <button class="register_overlap">재검색</button>-->
+          <button id="address_research" class="register_overlap">재검색</button>
+        </div>
       </div>
 
       <div class="register register_gender">
@@ -449,7 +459,7 @@
               </label>
 
               <label for="nocheck" class="check_label">
-                <input id="nocheck" class="a11yHidden check_common" type="radio" name="gender" value="nocheck" />
+                <input id="nocheck" class="a11yHidden check_common" type="radio" name="gender" value="nocheck" checked="checked"/>
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -470,18 +480,24 @@
             <div class="register_group">
               <div class="birth_input">
                 <label for="birth_year" class="birth_label">
-                  <input id="birth_year" class="birth_common" type="text" required placeholder="YYYY" name="birth" maxlength="4"/>
+                  <input id="birth_year" class="birth_common" type="text" required placeholder="YYYY" name="birth" maxlength="4" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>
                 </label>
                 <span>/</span>
                 <label for="birth_month" class="birth_label">
-                  <input id="birth_month" class="birth_common" type="text" required placeholder="MM" name="birth" maxlength="2"/>
+                  <input id="birth_month" class="birth_common" type="text" required placeholder="MM" name="birth" maxlength="2" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>
                 </label>
                 <span>/</span>
                 <label for="birth_day" class="birth_label">
-                  <input id="birth_day" class="birth_common" type="text" required placeholder="DD" name="birth" maxlength="2"/>
+                  <input id="birth_day" class="birth_common" type="text" required placeholder="DD" name="birth" maxlength="2" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"/>
                 </label>
               </div>
             </div>
+            <p id="year_validation" class="register_validation">태어난 년도 4자리를 정확히 입력하세요.</p>
+            <p id="year_available" class="register_validation">태어난 년도가 유효하지 않습니다.</p>
+            <p id="month_validation" class="register_validation">태어난 월 2자리를 정확히 입력하세요.</p>
+            <p id="month_available" class="register_validation">태어난 월이 유효하지 않습니다.</p>
+            <p id="day_validation" class="register_validation">태어난 일 2자리를 정확히 입력하세요.</p>
+            <p id="day_available" class="register_validation">태어난 일이 유효하지 않습니다.</p>
           </fieldset>
         </form>
       </div>
@@ -493,7 +509,7 @@
           <div class="register_group">
             <div class="register_input">
               <label for="recommend" class="check_label">
-                <input id="recommend" class="a11yHidden check_common" type="radio" name="add" value="male" />
+                <input id="recommend" class="a11yHidden check_common" type="radio" name="add" value="recommend" />
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -501,7 +517,7 @@
               </label>
 
               <label for="event" class="check_label">
-                <input id="event" class="a11yHidden check_common" type="radio" name="add" value="female" />
+                <input id="event" class="a11yHidden check_common" type="radio" name="add" value="event" />
                 <span class="input_checked">
                   <div class="input_inner"></div>
                 </span>
@@ -513,7 +529,7 @@
         </form>
       </div>
 
-      <!--<div class="register add_box">
+      <div class="register recommend">
         <span class="register_kind"></span>
 
         <form method="POST">
@@ -524,12 +540,24 @@
                 <label for="add_id" class="a11yHidden">추천인 아이디</label>
                 <input id="add_id" class="register_common" type="text" placeholder="추천인 아이디를 입력해 주세요." name="add_id"/>
               </div>
-
               <p class="register_notice id_information">가입 후 7일 내 첫 주문 배송완료시, 친구초대 이벤트 적립금이 지급됩니다.</p>
+            </div>
+          </fieldset>
+        </form>
 
+        <button class="register_overlap">아이디 확인</button>
+      </div>
+
+      <div class="register event">
+        <span class="register_kind"></span>
+
+        <form method="POST">
+          <fieldset>
+            <legend>주소</legend>
+            <div class="register_group">
               <div class="register_input add_input">
                 <label for="join_event" class="a11yHidden">추천인 아이디</label>
-                <input id="join_event" class="register_common" type="text" placeholder="추천인 아이디를 입력해 주세요." name="join_event"/>
+                <input id="join_event" class="register_common" type="text" placeholder="참여 이벤트명을 입력해 주세요." name="join_event"/>
               </div>
 
               <p class="register_notice event_information">
@@ -537,13 +565,10 @@
                 가입 이후는 수정이 불가능 합니다.<br/>
                 대소문자 및 띄어쓰기에 유의해주세요.
               </p>
-
             </div>
           </fieldset>
         </form>
-
-        <button class="register_overlap input_active">아이디 확인</button>
-      </div>-->
+      </div>
     </article>
 
     <article class="terms_wrap register_container">
@@ -551,22 +576,22 @@
         이용약관동의
       </span>
 
-      <div class="terms_list">
+      <form action="/" id="form_wrap" class="terms_list">
         <div class="terms_box">
-          <label for="terms_all" class="terms_label">
-            <input id="terms_all" class="a11yHidden terms_common" required type="checkbox" name="terms_all" value="all"/>
-            <img src="./assets/icons/Icon/checkbox.png" alt="" />
-            <span class="terms_text">전체 동의합니다.</span>
+          <label for="terms_all" class="terms_all">
+            <input id="terms_all" class="a11yHidden terms_common" type="checkbox" name="terms_all" value="all"/>
+            <i class="terms_checkbox"></i>
+            <span class="terms_text all">전체 동의합니다.</span>
           </label>
           <p class="terms_notice">
-
+            선택항목에 동의하지 않은 경우도 회원가입 및 일반적인 서비스를 이용할 수 있습니다.
           </p>
         </div>
 
         <div class="terms_box">
-          <label for="terms_use" class="terms_label">
-            <input id="terms_use" class="a11yHidden terms_common" required type="checkbox" name="terms_use" value="use"/>
-            <img src="./assets/icons/Icon/checkbox.png" alt="" />
+          <label for="terms_use" class="terms_check">
+            <input id="terms_use" class="a11yHidden terms_common" required type="checkbox" value="use"/>
+            <i class="terms_checkbox"></i>
             <span class="terms_text">이용약관 동의 (필수)</span>
           </label>
           <span>
@@ -575,9 +600,9 @@
         </div>
 
         <div class="terms_box">
-          <label for="terms_privacy" class="terms_label">
-            <input id="terms_privacy" class="a11yHidden terms_common" required type="checkbox" name="terms_privacy" value="privacy"/>
-            <img src="./assets/icons/Icon/checkbox.png" alt="" />
+          <label for="terms_privacy" class="terms_check">
+            <input id="terms_privacy" class="a11yHidden terms_common" required type="checkbox" value="privacy"/>
+            <i class="terms_checkbox"></i>
             <span class="terms_text">개인정보 수집 · 이용 동의 (필수)</span>
           </label>
           <span>
@@ -586,9 +611,9 @@
         </div>
 
         <div class="terms_box">
-          <label for="terms_receive" class="terms_label" >
-            <input id="terms_receive" class="a11yHidden terms_common" type="checkbox" name="terms_receive" value="receive"/>
-            <img src="./assets/icons/Icon/checkbox.png" alt="" />
+          <label for="terms_receive" class="terms_check" >
+            <input id="terms_receive" class="a11yHidden terms_common" type="checkbox" value="receive"/>
+            <i class="terms_checkbox"></i>
             <span class="terms_text">무료배송, 할인쿠폰 등 혜택/정보 수신 동의 (선택)</span>
           </label>
           <span>
@@ -597,20 +622,20 @@
         </div>
 
         <div class="terms_box">
-          <label for="terms_age" class="terms_label">
-            <input id="terms_age" class="a11yHidden terms_common" required type="checkbox" name="terms_age" value="age"/>
-            <img src="./assets/icons/Icon/checkbox.png" alt="" />
+          <label for="terms_age" class="terms_check">
+            <input id="terms_age" class="a11yHidden terms_common" required type="checkbox" value="age"/>
+            <i class="terms_checkbox"></i>
             <span class="terms_text">본인은 만 14세 이상입니다. (필수)</span>
           </label>
           <span>
             <a class="terms_link" href="#">약관보기</a>
           </span>
         </div>
-      </div>
+      </form>
     </article>
 
     <article class="register_button register_container">
-      <button>가입하기</button>
+      <button id="register_submit" disabled="">가입하기</button>
     </article>
   </section>
 
