[feat] 오늘의 추천 상품 클릭 시 최근 본 항목에 추가 #54

--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
         <div class="swiper_recommend_products swiper_today">
           <div class="swiper-wrapper recommend_products_wrapper">
             <div class="swiper-slide recommend_products_slide">
-              <a href="/">
+              <a href="./client/page_productDetail_my.html">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -343,7 +343,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -357,7 +357,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -371,7 +371,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -385,9 +385,9 @@
               </a>
             </div>
             <div class="swiper-slide recommend_products_slide">
-              <a href="/">
+              <a href="./client/page_productDetail_my.html">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -401,7 +401,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -415,7 +415,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -429,7 +429,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -443,9 +443,9 @@
               </a>
             </div>
             <div class="swiper-slide recommend_products_slide">
-              <a href="/">
+              <a href="./client/page_productDetail_my.html">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
+                  <img src="./client/assets/thumbnail/product01.png" class="product_img" alt="탱탱쫄면 4개입" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -459,7 +459,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                  <img src="./client/assets/thumbnail/product02.png" class="product_img" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -473,7 +473,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                  <img src="./client/assets/thumbnail/product03.png" class="product_img" alt="밀키퀸 현미 4kg" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -487,7 +487,7 @@
             <div class="swiper-slide recommend_products_slide">
               <a href="/">
                 <div class="product_img_container">
-                  <img src="./client/assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                  <img src="./client/assets/thumbnail/product04.png" class="product_img" alt="스프레이형과 기본형의 세탁세" />
                   <button type="button">
                     <img src="./client/assets/icons/main/Cart.png" alt="장바구니 아이콘" />
                   </button>
@@ -732,7 +732,9 @@
     <section class="recent_products_container">
       <h2 class="recent_products_title">최근 본 상품</h2>
       <ul class="recent_products_list">
-        <li class="recent_product">product1</li>
+        <li class="recent_product">
+          <a href=""></a>
+        </li>
         <li class="recent_product">product2</li>
         <li class="recent_product">product3</li>
       </ul>
