--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <div class="cart_product_name">[풀무원] 탱탱쫄면 (4개입)</div>
             <div class="cart_product_price">4,980원</div>
             <div class="count">
-              <button type="button" class="btn_count btn_count_minus"  aria-label="수량 줄이기" aria-disabled="true"></button>
+              <button type="button" class="btn_count btn_count_minus" aria-label="수량 줄이기" aria-disabled="true"></button>
               <div class="count_number">0</div>        
               <button type="button" class="btn_count btn_count_plus" aria-label="수량 늘리기" ></button>
             </div>
@@ -733,13 +733,13 @@
       <h2 class="recent_products_title">최근 본 상품</h2>
       <ul class="recent_products_list">
         <li class="recent_product">
-          <a href=""></a>
+          <a href="" title="최근 본 상품 페이지로 이동 (현재창)"></a>
         </li>
         <li class="recent_product">product2</li>
         <li class="recent_product">product3</li>
       </ul>
-      <button type="button" class="recent_products_prev"></button>
-      <button type="button" class="recent_products_next"></button>
+      <button type="button" class="recent_products_prev" aria-label="이전 슬라이드로 이동"></button>
+      <button type="button" class="recent_products_next" aria-label="다음 슬라이드로 이동"></button>
     </section>
   </main>
 
